src/app.scss
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind variants;

// Theme overrides

[data-theme='coffee'] h2,
[data-theme='coffee'] h1,
[data-theme='coffee'] h3,
[data-theme='coffee'] h4,
[data-theme='coffee'] h5,
[data-theme='coffee'] h6,
[data-theme='coffee'] a,
[data-theme='coffee'] button {
  font-weight: bold;
}

* {
  -webkit-tap-highlight-color: transparent;
}

/* Mesh generator: https://csshero.org/mesher/ */
[data-theme='coffee'] {
  background-color: hsla(224, 20%, 88%, 1);
  background-image: radial-gradient(at 27% 15%, hsla(182, 96%, 18%, 0.3) 0px, transparent 50%),
    radial-gradient(at 17% 79%, hsla(16, 75%, 31%, 0.25) 0px, transparent 50%),
    radial-gradient(at 92% 6%, hsla(24, 85%, 37%, 0.25) 0px, transparent 50%),
    radial-gradient(at 100% 100%, hsla(128, 72%, 41%, 0.25) 0px, transparent 50%),
    radial-gradient(at 78% 49%, hsla(289, 96%, 62%, 0.15) 0px, transparent 50%);
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.dark [data-theme='coffee'] {
  background-color: hsla(223, 73%, 16%, 1);
  background-image: radial-gradient(at 27% 15%, hsla(182, 96%, 18%, 0.3) 0px, transparent 50%),
    radial-gradient(at 17% 79%, hsla(16, 75%, 31%, 0.25) 0px, transparent 50%),
    radial-gradient(at 92% 6%, hsla(24, 85%, 37%, 0.25) 0px, transparent 50%),
    radial-gradient(at 100% 100%, hsla(128, 72%, 41%, 0.25) 0px, transparent 50%),
    radial-gradient(at 78% 49%, hsla(289, 96%, 62%, 0.15) 0px, transparent 50%);
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

// AppShell overrides

html,
body {
  @apply h-full overflow-hidden;
}

body {
  @apply bg-surface-50-900-token;
}

.app-rail-anchor {
  @apply block overflow-hidden rounded-md;
}

// Autocomplete overrides

.autocomplete-button {
  text-align: start;
}

// Input group overrides

.input-group.measurement-input {
  input {
    min-width: 10rem !important;
  }

  select,
  .input-group-shim {
    min-width: 6rem !important;
  }
}

// Modal overrides

.modal-backdrop {
  @apply overflow-hidden;
}

.modal-transition {
  @apply h-full;
}

.modal.dangerous {
  .modal-footer {
    button:not(:last-child) {
      @apply variant-ghost-surface;
    }

    button:last-child {
      @apply variant-filled-error;
    }
  }
}

.modal-footer {
  button:not(:last-child) {
    @apply variant-ghost-primary;
  }

  button:last-child {
    @apply variant-filled-primary;
  }
}

// Snackbar overrides

.snackbar {
  @apply px-8;
}

// Table overrides

.table {
  @apply rounded-md;

  tbody {
    tr:nth-child(2n) {
      @apply bg-surface-200-700-token;
    }
  }

  &.table-interactive tbody tr {
    @apply transition ease-out;
  }
}

// Toast overrides

.toast {
  @apply flex-col sm:flex-row gap-4;

  .toast-actions {
    margin-left: 0 !important;
  }
}

// Custom design tokens

.autocomplete-token {
  @apply card z-10 p-4 max-h-48 bg-surface-200-700-token overflow-y-auto shadow-xl;
}

.chip-interactive-token {
  @apply chip variant-soft-secondary hover:variant-filled-secondary;
}

.page-header-title {
  @apply h2 flex items-center overflow-hidden;

  span {
    @apply leading-[1.3] overflow-hidden text-ellipsis whitespace-nowrap;
  }
}

.page-with-actions-token {
  @apply mb-24;
}

.page-actions-token {
  @apply flex items-end gap-4 fixed z-10 bottom-8 right-8;
}

.popup-token {
  @apply card p-4 bg-surface-200-700-token shadow-xl;
}

.radio-group-token {
  @apply flex-col sm:flex-row sm:min-w-[24rem];
}

.range-slider-accent-token {
  @apply accent-primary-500 dark:accent-primary-600;
}

.slide-toggle-active-token {
  @apply bg-primary-500 dark:bg-primary-600;
}

